# gec6818_fingerprint

./: .gitignore  AS608_command.h  Finger.c  Finger.h  README.md  TimerEvent.c  TimerEvent.h  sha256.c  sha256.h  sql.c  sql.h
sqlite/: CMakeLists.txt  test.sql
